fix: made code for Contact Us page more readable

--- a/itis3135/project/styles/style.css
+++ b/itis3135/project/styles/style.css
@@ -436,3 +436,118 @@ iframe {
 .how-to-play-text {
     margin-top: 3%;
 }
+
+/*Contact Us Page*/
+#contact-form {
+    /* background-color: rgb(252, 231, 203); */
+    margin: 2% 25% 0; 
+    width: 50%; 
+    height: 40vw;
+    border-radius: 8px;
+    box-sizing: border-box;
+    border: 1px solid; 
+
+    /*The following properties are probably temporary, just to make it easier to style the rest*/
+    /* border: brown 1px hidden; */
+    /* border-style: solid; */
+}
+
+/* #contact-form-header {
+    margin-left: 5%;
+    margin-right: 2%;
+    margin-bottom: 2%;
+    font-size: 1.3rem;
+} */
+
+/*General formatting for label, input, and textarea in Contact Form*/
+label {
+    display: block;
+    margin: 0 5% 0.5%;
+}
+
+input {
+    display: block;
+    margin: 0 5% 3%;
+    /* padding: 1.2% 32%; */
+    box-sizing: border box;
+    width: 87%;
+    height: 7%;
+    border-radius: 5px;
+    border: 1px inset; 
+    /* border: 1px inset; */
+    font-size: 1rem;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+}
+
+textarea {
+    display: block;
+    margin: 0 5% 3%;
+    width: 87%;
+    min-height: 20%;
+    border-radius: 3px;
+    font-size: 1rem;
+    box-sizing: border box;
+    padding: 1.5%;
+    font-family: "Roboto";
+    resize: vertical;
+}
+
+#contact-form button {
+    margin: 1% 5%;
+    width: 25%;
+    height: 9%;
+    background-color: #6a1b9a;
+    box-sizing: border box;
+    border: 0;
+    color: white;
+    border-radius: 8px;
+    font-size: 1rem;
+}
+
+/*Special rules for name-container in Contact Form, overriding the general rules
+*/
+#name-container {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    height: 10%;
+    margin-top: 5%;
+    margin-bottom: 4%;
+}
+
+#first-name-container {
+    /* margin: 2% 0 2% 4%;   */
+    margin-left: 3%;
+    width: 47%;
+    height: 100%;
+}
+
+#last-name-container {
+    /* margin: 2% 5%; */
+    width: 47%;
+    height: 100%;
+}
+
+#first-name-container input {
+    /* padding-bottom: 7%; */
+    width: 84%;
+    height: 65%;
+    box-sizing: border box;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+#last-name-container input {
+    width: 84%;
+    height: 65%;
+    box-sizing: border box;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+
+/*Formatting the first name and last name sections. All this code is such a mess. I should maybe
+go back and fix it later.*/
+
+
